#16235 closed bug (fixed)
Wrong naming for Zanazabar Square Unicode Block
Reported by: | TheClue | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | User Interface | Version: | R1/beta2 |
Keywords: | translatable strings | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
In Pootle, the Unicode Block "Zanabazar Square" is wrongly called "Zanzabar Square"
Please ignore the typo in the title of the bug: the right name is "Zanabazar", as in the description
Change History (5)
comment:1 by , 5 years ago
Description: | modified (diff) |
---|
comment:2 by , 5 years ago
Description: | modified (diff) |
---|
comment:3 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:4 by , 5 years ago
I'm...ehm...checking every Unicode Block using Wikipedia as a reference ' i feel a bit sociopathic today ;P
comment:5 by , 5 years ago
Milestone: | Unscheduled → R1/beta3 |
---|
Move closed tickets into beta3 milestone
Note:
See TracTickets
for help on using tickets.
Fixed in hrev54317. How could anyone have missed that... nice catch. :)