Fix typo in unicode block name

Fixes #16235